--- a/Blog-System/package.json
+++ b/Blog-System/package.json
@@ -8,13 +8,20 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
+  "engines": {
+    "node":"16.13.1"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-fileupload": "^1.2.1",
-    "mongoose": "^6.1.5"
+    "express-session": "^1.17.2",
+    "mongoose": "^6.1.5",
+    "mongoose-unique-validator": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
